# dbus2http

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  all.json  conandata.yml  conanfile.py  dockerfile
.github/workflows/: cmake-in-docker.yml
cmake/: Pack.cmake  git_head.cmake
debian/: postinst  postrm  preinst  prerm
deploy/etc/dbus-1/system.d/: com.syriusrobotics.dbus2http.conf
deploy/lib/systemd/system/: dbus2http.service
deploy/var/www/dbus2http/schema/: dbus2http_openapi.yaml  swagger-initializer.js
docker/: dockerfile
docker/conan/: global.conf  profile_host_armv8.txt
docker/source.list.d/: ubuntu.sources
include/: match_rule.inc
include/dbus2http/: Config.h  Dbus2Http.h  DbusCaller.h  DbusEnumerator.h  DbusUtils.h  EchoService.h  ExampleService.h  FileLineFormatter.h  Json2Message.h  Message2Json.h  Rand2Json.h  SignalSocket.h  WebService.h
include/dbus2http-proxy/: Dbus2Http.h  DbusCaller.h  DbusEnumerator.h  EchoService.h  ExampleService.h  Json2Message.h  Message2Json.h  SignatureUtils.h  WebService.h  test_methods.h
include/dbus2http-proxy/entity/: DbusSerialization.h  InterfaceContext.h  argument.h  interface.h  method.h  object_path.h  property.h  service.h  signal.h
include/dbus2http/entity/: DbusSerialization.h  InterfaceContext.h  argument.h  flags.h  interface.h  method.h  object_path.h  property.h  service.h  signal.h
scripts/: build.sh  curl.sh  docker_run.sh
source.list.d/: arm64.sources
src/: Dbus2Http.cpp  DbusEnumerator.cpp  DbusSerialization.cpp  ExampleService.cpp  Json2Message.cpp  Message2Json.cpp  Rand2Json.cpp  SignalSocket.cpp  SignatureUtils.cpp  WebService.cpp  caller.cpp  example.cpp  example_srv.cpp  main.cpp
tests/: EchoService.cpp  test_methods.cpp
